--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,14 @@
 
 <script>
 
+  window.addEventListener("keydown",function(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    if(!audio) return; // stop function
+
+    audio.play()
+
+  });
+
 </script>
 
 
