--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -61,11 +61,22 @@
 
   window.addEventListener("keydown",function(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
     if(!audio) return; // stop function
 
+    audio.currentTime = 0; // rewind
     audio.play()
+    key.classList.add("playing");
 
   });
+
+  function removeTransition(e) {
+    if (e.properyName !== "transform") return; // skip it if is not transfrom
+    e.target.classList.remove('playing');
+  }
+
+  const keys = document.querySelectorAll(".key");
+  keys.forEach(key => key.addEventListener("transitionend", removeTransition))
 
 </script>
 
